--- a/postit/src/global.scss
+++ b/postit/src/global.scss
@@ -9,25 +9,25 @@
  * https://ionicframework.com/docs/layout/global-stylesheets
  */
 
-@import url(theme/button.scss);
-@import url(theme/input.scss);
-
-/* Core CSS required for Ionic components to work properly */
-@import "~@ionic/angular/css/core.css";
-
-/* Basic CSS for apps built with Ionic */
-@import "~@ionic/angular/css/normalize.css";
-@import "~@ionic/angular/css/structure.css";
-@import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
-
-/* Optional CSS utils that can be commented out */
-@import "~@ionic/angular/css/padding.css";
-@import "~@ionic/angular/css/float-elements.css";
-@import "~@ionic/angular/css/text-alignment.css";
-@import "~@ionic/angular/css/text-transformation.css";
-@import "~@ionic/angular/css/flex-utils.css";
-
+ @import url(theme/button.scss);
+ @import url(theme/input.scss);
+ 
+ /* Core CSS required for Ionic components to work properly */
+ @import "~@ionic/angular/css/core.css";
+ 
+ /* Basic CSS for apps built with Ionic */
+ @import "~@ionic/angular/css/normalize.css";
+ @import "~@ionic/angular/css/structure.css";
+ @import "~@ionic/angular/css/typography.css";
+ @import '~@ionic/angular/css/display.css';
+ 
+ /* Optional CSS utils that can be commented out */
+ @import "~@ionic/angular/css/padding.css";
+ @import "~@ionic/angular/css/float-elements.css";
+ @import "~@ionic/angular/css/text-alignment.css";
+ @import "~@ionic/angular/css/text-transformation.css";
+ @import "~@ionic/angular/css/flex-utils.css";
+ 
 /** Fonts **/
 * {
     font-family: "OpenSans";
@@ -50,3 +50,9 @@
     src: url(../../../postitLiga/postit/src/assets/fontes/static/OpenSans/OpenSans-Bold.ttf);
     font-weight: 600;
 }
+
+.background-modal {
+    --background: transparent;
+    //{@link https://forum.ionicframework.com/t/cannot-dismiss-a-modal-by-clicking-the-backdrop-ionic-6/221459}
+    --height: 65vh;
+  }
